[fix] Fixing language string errors

--- a/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
@@ -31,7 +31,7 @@ BROWSE="Browse"
 VIEW="View"
 TAGLINE="Become a contributor!"
 SHOW="Show"
-SORT_BY="Sort by"
+COM_MEMBERS_APPLY="Apply"
 SEARCH_NAME="Search"
 SEARCH="Search"
 GO="Go"
@@ -246,11 +246,18 @@ COM_MEMBERS_BROWSE_SORT_ORG="&darr; Organization"
 COM_MEMBERS_BROWSE_SORT_BY_ORG="Sort by organization"
 COM_MEMBERS_BROWSE_SORT_CONTRIBUTIONS="&darr; Contributions"
 COM_MEMBERS_BROWSE_SORT_BY_CONTRIBUTIONS="Sort by number of contributions"
+COM_MEMBERS_BROWSE_SORT="Sort"
+COM_MEMBERS_BROWSE_SORT_BY="Sort by"
+COM_MEMBERS_BROWSE_SORT_DIR="Direction"
+COM_MEMBERS_BROWSE_SORT_DIR_ASC="Ascending (A-Z)"
+COM_MEMBERS_BROWSE_SORT_DIR_DESC="Descending (Z-A)"
+COM_MEMBERS_BROWSE_FILTERS="Narrow Results"
 COM_MEMBERS_BROWSE_FILTER="Filter"
 COM_MEMBERS_BROWSE_FILTER_ALL="All"
 COM_MEMBERS_BROWSE_FILTER_RESULTS="Filter results"
 COM_MEMBERS_BROWSE_FILTER_APPLIED="Applied filters"
 COM_MEMBERS_BROWSE_FILTER_ADD="+ Add filter"
+COM_MEMBERS_BROWSE_FILTER_REMOVE="Remove filter"
 COM_MEMBERS_BROWSE_FILTER_BY_ALL="Show All members"
 COM_MEMBERS_BROWSE_FILTER_CONTRIBUTORS="Contributors"
 COM_MEMBERS_BROWSE_FILTER_BY_CONTRIBUTORS="Show only members with Contributions"
@@ -260,7 +267,7 @@ COM_MEMBERS_BROWSE_NO_MEMBERS_FOUND="No members found."
 COM_MEMBERS_SEARCH="Search"
 COM_MEMBERS_SEARCH_LEGEND="Search for Members"
 COM_MEMBERS_SEARCH_LABEL="Enter keyword or phrase"
-COM_MEMBERS_SEARCH_PLACEHOLDER="Search Members by name"
+COM_MEMBERS_SEARCH_PLACEHOLDER="Name or keyword..."
 COM_MEMBERS_SEARCH_FOR_IN="Search for &quot;%s&quot; in &quot;%s&quot;"
 
 ; Profile
@@ -298,7 +305,7 @@ COM_MEMBERS_PROFILE_ORCID="ORCID"
 COM_MEMBERS_PROFILE_ORCID_ENTER="Enter your ORCID."
 COM_MEMBERS_PROFILE_ORCID_FIND="Find your ID"
 COM_MEMBERS_PROFILE_ORCID_ABOUT="ORCID provides a persistent digital identifier that distinguishes you from every other researcher and supports automated linkages between you and your professional activities ensuring that your work is recognized. <a rel="_QQ_"external"_QQ_" href="_QQ_"http://orcid.org"_QQ_">Find out more.</a>"
-COM_MEMBERS_PROFILE_ORCID_UNAVAILABLE="This service is currently unavailable and/or not configured correctly. Please contact <a href="%s">support</a> for further assistance."
+COM_MEMBERS_PROFILE_ORCID_UNAVAILABLE="This service is currently unavailable and/or not configured correctly. Please contact <a href="_QQ_"%s"_QQ_">support</a> for further assistance."
 COM_MEMBERS_PROFILE_ORCID_ASSOCIATE_ORCID="Associate your <b>ORCID</b> (Open Researcher and Contributor ID)"
 COM_MEMBERS_PROFILE_ORCID_PROFILE_INFO="Profile Info"
 COM_MEMBERS_PROFILE_ORCID_FIRST_NAME="First name:"
@@ -308,7 +315,7 @@ COM_MEMBERS_PROFILE_ORCID_SEARCH_FOR_EXISTING="Search for an existing ORCID"
 COM_MEMBERS_PROFILE_ORCID_FILL_AND_SEARCH="If you have created an ORCID, fill in the fields above and search for your ID from the list."
 COM_MEMBERS_PROFILE_ORCID_NOTE_ABOUT_PRIVATE_ORCID="Note that most ORCID records have the email address marked as private and private information will not be returned in the search results."
 COM_MEMBERS_PROFILE_ORCID_CREATE_ORCID="Create a new ORCID"
-COM_MEMBERS_PROFILE_ORCID_CLICK_CREATE_BUTTON="If you can\'t find your ID or would like to create one, click the "Create or Connect your ORCID iD" button."
+COM_MEMBERS_PROFILE_ORCID_CLICK_CREATE_BUTTON="If you can't find your ID or would like to create one, click the "_QQ_"Create or Connect your ORCID"_QQ_" button."
 COM_MEMBERS_PROFILE_ORCID_CREATE_OR_CONNECT="Create or Connect your ORCID iD"
 COM_MEMBERS_REDIRECT_ORCID_THANK_YOU="Thank you, %s!"
 COM_MEMBERS_REDIRECT_ORCID_YOUR_ORCID="Your ORCID"
