--- a/core/plugins/members/citations/language/en-GB/en-GB.plg_members_citations.ini
+++ b/core/plugins/members/citations/language/en-GB/en-GB.plg_members_citations.ini
@@ -95,8 +95,8 @@ PLG_MEMBERS_CITATIONS_NONAFFILIATED="Non-affiliated"
 PLG_MEMBERS_CITATIONS_TOTAL="Total"
 PLG_MEMBERS_CITATIONS_PERCENT="Percent"
 PLG_MEMBERS_CITATIONS_TYPE="Type"
-
-
+PLG_MEMBERS_CITATIONS_MEMBERCONTRIB="Member contributed"
+PLG_MEMBERS_CITATIONS_RESET="Reset"
 PLG_MEMBERS_CITATIONS_DELETE="Delete"
 PLG_MEMBERS_CITATIONS_SORT="Sort"
 PLG_MEMBERS_CITATIONS_DATE="Date entered"
