--- a/core/plugins/members/impact/language/en-GB/en-GB.plg_members_impact.ini
+++ b/core/plugins/members/impact/language/en-GB/en-GB.plg_members_impact.ini
@@ -20,7 +20,7 @@ PLG_MEMBERS_IMPACT_STATS_VIEWS="Pageviews"
 PLG_MEMBERS_IMPACT_STATS_ACCESSES="Accesses"
 PLG_MEMBERS_IMPACT_STATS_SUPPORTING="Supporting docs access"
 PLG_MEMBERS_IMPACT_STATS_USERS="Users"
-PLG_MEMBERS_IMPACT_VIEW_USAGE=View recent usage
+PLG_MEMBERS_IMPACT_VIEW_USAGE="View recent usage"
 
 PLG_MEMBERS_IMPACT_OR="or"
 PLG_MEMBERS_IMPACT_AND_OR="and/or"
