--- a/core/plugins/members/activity/language/en-GB/en-GB.plg_members_activity.ini
+++ b/core/plugins/members/activity/language/en-GB/en-GB.plg_members_activity.ini
@@ -53,7 +53,7 @@ PLG_MEMBERS_ACTIVITY_FILTER_CREATED_BY_NOTME="Everyone else"
 ; Members emails
 COM_MEMBERS="Members"
 PLG_MEMBERS_ACTIVITY_EMAIL_MEMBERS_EXPLANATION="Recent activity for <a href="_QQ_"%s"_QQ_">%s</a>"
-PLG_MEMBERS_ACTIVITY_EMAIL_WHY_NOTFIED="%s sent this email because you were added to the list of recipients on <a href="_QQ_"%s"_QQ_">%s</a>. Visit our <a href="%s/legal/privacy">Privacy Policy</a> and <a href="%s/support">Support Center</a> if you have any questions."
+PLG_MEMBERS_ACTIVITY_EMAIL_WHY_NOTFIED="%s sent this email because you were added to the list of recipients on <a href="_QQ_"%s"_QQ_">%s</a>. Visit our <a href="_QQ_"%s/legal/privacy"_QQ_">Privacy Policy</a> and <a href="_QQ_"%s/support"_QQ_">Support Center</a> if you have any questions."
 PLG_MEMBERS_ACTIVITY_EMAIL_SUBJECT="Recent Activity"
 
 ; Settings
