--- a/core/plugins/members/usage/language/en-GB/en-GB.plg_members_usage.ini
+++ b/core/plugins/members/usage/language/en-GB/en-GB.plg_members_usage.ini
@@ -42,6 +42,8 @@ PLG_MEMBERS_USAGE_TBL_TH_USERS_TOTAL="Total users served"
 PLG_MEMBERS_USAGE_TBL_TH_CITATIONS="Citations"
 PLG_MEMBERS_USAGE_TBL_TH_PUBLISHED="Published On"
 PLG_MEMBERS_USAGE_FOOTNOTE="* Total only includes versions of the tools this author contributed to."
+PLG_MEMBERS_USAGE_TOTAL="Total"
+PLG_MEMBERS_USAGE_USERS_IN_COURSES_SERVED="%s users served in %s courses from %s institutions"
 
 PLG_MEMBERS_USAGE_PARAM_DISPLAY_TAB_LABEL="Show in menu"
 PLG_MEMBERS_USAGE_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
