--- a/core/components/com_members/admin/language/en-GB/en-GB.com_members.members.ini
+++ b/core/components/com_members/admin/language/en-GB/en-GB.com_members.members.ini
@@ -83,6 +83,7 @@ COM_MEMBERS_PROFILE_ORCID="ORCID"
 COM_MEMBERS_PROFILE_ORCID_ENTER="Enter your ORCID."
 COM_MEMBERS_PROFILE_ORCID_FIND="Find your ID"
 COM_MEMBERS_PROFILE_ORCID_ABOUT="ORCID provides a persistent digital identifier that distinguishes you from every other researcher and supports automated linkages between you and your professional activities ensuring that your work is recognized. <a rel="_QQ_"external"_QQ_" href="_QQ_"http://orcid.org"_QQ_">Find out more.</a>"
+COM_MEMBERS_PROFILE_ORCID_CREATE_OR_CONNECT="Create or Connect"
 
 ; Fields
 COM_MEMBERS_ORCID_FIND_ID="Find ID"
