[fix] Add view for personal access tokens
This adds a view for personal access tokens that are granted.  Some
templates were not showing the redirect messages (or they fade out or
have other kinds of issues).

Fixes: https://smarteragriculture.org/support/ticket/221

--- a/core/components/com_developer/site/language/en-GB/en-GB.com_developer.ini
+++ b/core/components/com_developer/site/language/en-GB/en-GB.com_developer.ini
@@ -135,6 +135,9 @@ COM_DEVELOPER_API_APPLICATION_RESET_CLIENT_SECRET_CONFIRM="Your current client s
 COM_DEVELOPER_API_APPLICATION_CLIENT_SECRET_RESET="The applications secret has been successfully reset."
 COM_DEVELOPER_API_APPLICATION_UNABLE_TO_RESET_CLIENT_SECRET="Unable to reset client secret. Please try again."
 
+COM_DEVELOPER_API_APPLICATION_TOKENS_PERSONAL_APPLICATION_TOKEN="Personal Access Token"
+COM_DEVELOPER_API_APPLICATION_TOKENS_NEW_PERSONAL_APPLICATION_TOKEN="Your new access token"
+COM_DEVELOPER_API_APPLICATION_TOKENS_MAKE_SURE_PERSONAL_APPLICATION_TOKEN="Make sure you save this token, it will not be accessible again"
 
 ; Misc
 COM_DEVELOPER_SAVE="Save"
