[feat] Implement /admin resource badge updating
Administrators can now update a resources badges via a resource's edit
page

--- a/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
+++ b/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
@@ -142,6 +142,7 @@ COM_RESOURCES_FIELD_INTROTEXT="Intro Text"
 COM_RESOURCES_FIELD_RANKING="Ranking"
 COM_RESOURCES_FIELD_RATING="Rating"
 COM_RESOURCES_FIELD_HITS="Hits"
+COM_RESOURCES_FIELDSET_BADGES="Badges"
 COM_RESOURCES_FIELDSET_PARAMETERS="Parameters"
 COM_RESOURCES_FIELDSET_TAGS="Tags"
 COM_RESOURCES_FIELD_STATUS="Status"
