Cleans up excess code on admin side

--- a/core/components/com_media/admin/language/en-GB/en-GB.com_media.ini
+++ b/core/components/com_media/admin/language/en-GB/en-GB.com_media.ini
@@ -1,7 +1,11 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
+; Copyright 2005-2015 HUBzero Foundation, LLC.
+; All rights reserved.
+;
+; This program is free software; you can redistribute it and/or
+; modify it under the terms of the GNU General Public License,
+; Version 2 as published by the Free Software Foundation.
+
+; Note : All ini files need to be saved as UTF-8 - No BOM
 
 COM_MEDIA="Media Manager"
 COM_MEDIA_ALIGN="Align"
