[feat] Option to disable 'recent' tab This comes from a HUBzero Foundation request to remove the 'recent' groups tab from the module. As most find it useful, I instead added a config option for turning off the tab (on by default).

--- a/core/modules/mod_mygroups/language/en-GB/en-GB.mod_mygroups.ini
+++ b/core/modules/mod_mygroups/language/en-GB/en-GB.mod_mygroups.ini
@@ -46,3 +46,5 @@ MOD_MYGROUPS_PARAM_SHOWADD_LABEL="Show New Group Button"
 MOD_MYGROUPS_PARAM_SHOWADD_DESC="Select wether to show the link to the create group form."
 MOD_MYGROUPS_PARAM_ARCHIVED_LABEL="Include archived groups?"
 MOD_MYGROUPS_PARAM_ARCHIVED_DESC="Select wether to include archived groups in the list."
+MOD_MYGROUPS_PARAM_SHOWRECENT_LABEL="Show recent groups"
+MOD_MYGROUPS_PARAM_SHOWRECENT_DESC="Show a tab listing recently visited groups."
