[feature] Add Resources - Collections plugin This plugin allows users to add resources to resource collections. Resource types with the plugin enabled will provide an 'Add to Collection' button on resource page. It allow allows resources to be added to a collection during the 'attach' step for collection resource types.

--- a/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
+++ b/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
@@ -115,6 +115,8 @@ COM_RESOURCES_FIELD_ALIAS_HINT="Letters and numbers only. If no alias provided, 
 COM_RESOURCES_FIELD_CATEGORY="Category"
 COM_RESOURCES_FIELD_CONTRIBUTABLE="Contributable"
 COM_RESOURCES_FIELD_CONTRIBUTABLE_EXPLANATION="Users can contribute this type from the front-end"
+COM_RESOURCES_FIELD_COLLECTION="Collection"
+COM_RESOURCES_FIELD_COLLECTION_EXPLANATION="This type is a collection of internal resources"
 COM_RESOURCES_FIELD_DESCIPTION="Description"
 COM_RESOURCES_FIELD_LINKED_ACTION="Linked file action"
 COM_RESOURCES_FIELD_LINKED_ACTION_DEFAULT="Default"
