--- a/core/components/com_resources/site/language/en-GB/en-GB.com_resources.ini
+++ b/core/components/com_resources/site/language/en-GB/en-GB.com_resources.ini
@@ -94,7 +94,7 @@ COM_RESOURCES_VIEW_RESOURCE="View Resource"
 COM_RESOURCES_VIEW_PRESENTATION="View Presentation"
 COM_RESOURCES_VIEW_LINK="View Link"
 COM_RESOURCES_LOGIN_REQUIRED_TO_DOWNLOAD="This resource requires you to log in before you can proceed with the download."
-
+COM_RESOURCES_ADD_CHILD_SUCCESS="Successfully added this resource to %s"
 ; About fields
 COM_RESOURCES_CITE_THIS="Cite this work"
 COM_RESOURCES_TAGS="Tags"
