Adds column sorting, filtering, and searching

--- a/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
+++ b/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
@@ -42,6 +42,12 @@ COM_NEWSLETTER_TOOLBAR_MANAGE="Manage"
 COM_NEWSLETTER_TOOLBAR_EXPORT="Export List"
 COM_NEWSLETTER_TOOLBAR_SUBMIT="Submit"
 
+; Filter
+COM_NEWSLETTER_GO="Go"
+COM_NEWSLETTER_FILTER_SEARCH_PLACEHOLDER="Search..."
+COM_NEWSLETTER_ALL_TYPES="- Select Type -"
+COM_NEWSLETTER_TYPE_HTML="HTML"
+COM_NEWSLETTER_TYPE_PLAIN="Plain"
 
 ; Configuration
 COM_NEWSLETTER_CONFIG_FROM_NAME_LABEL="Newsletter From Name"
