--- a/components/com_tags/admin/language/en-GB/en-GB.com_tags.ini
+++ b/components/com_tags/admin/language/en-GB/en-GB.com_tags.ini
@@ -124,6 +124,8 @@ COM_TAGS_GROUP="Group"
 COM_TAGS_GROUP_NAME="Group name"
 COM_TAGS_ADD_GROUP="Add group"
 COM_TAGS_DELETE_GROUP="Delete group"
+COM_TAGS_GROUP_LABEL="Label"
+COM_TAGS_GROUP_ABOUT="About"
 COM_TAGS_GROUP_SINGLE_SELECT="single-select"
 COM_TAGS_GROUP_SINGLE_SELECT_RADIO="single-select (radio)"
 COM_TAGS_GROUP_MULTI_SELECT="multiple-select (checkbox)"
