[fix] Fixing various broken or missing language strings

--- a/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
@@ -79,6 +79,8 @@ COM_PROJECTS_YOU_DONT_HAVE_PROJECTS="You don't have any projects."
 COM_PROJECTS_OWNER="Owner"
 COM_PROJECTS_STATUS_INACTIVE="Inactive"
 COM_PROJECTS_PUBLISHED="published"
+COM_PROJECTS_ENTER_PHRASE="Enter keyword or phrase"
+COM_PROJECTS_SEARCH="Search"
 
 ; INTRODUCTION
 COM_PROJECTS_INTRO_COLLABORATION_MADE_EASY="Collaboration made easy"
