--- a/core/plugins/projects/feed/language/en-GB/en-GB.plg_projects_feed.ini
+++ b/core/plugins/projects/feed/language/en-GB/en-GB.plg_projects_feed.ini
@@ -24,3 +24,5 @@ COM_PROJECTS_COMMENT_CANCEL="Cancel"
 PLG_PROJECTS_FEED_ONLINE="Online now"
 PLG_PROJECTS_BLOG_DELETE_CONFIRMATION="Permanently delete this entry?"
 COM_PROJECTS_SAID="said"
+PLG_PROJECTS_ACTIVITY_ANONYMOUS="Anonymous"
+PLG_PROJECTS_ACTIVITY_UNKNOWN="(unknown)"
