--- a/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -174,6 +174,7 @@ PLG_PROJECTS_PUBLICATIONS_UNPUBLISHED="Unpublished"
 PLG_PROJECTS_PUBLICATIONS_IN_DEV="In Development"
 PLG_PROJECTS_PUBLICATIONS_TOTAL="total"
 PLG_PROJECTS_PUBLICATIONS_TITLE="Title"
+PLG_PROJECTS_PUBLICATIONS_ID="ID"
 PLG_PROJECTS_PUBLICATIONS_OPTIONS="Options"
 PLG_PROJECTS_PUBLICATIONS_STARTED="Started"
 PLG_PROJECTS_PUBLICATIONS_CREATED="created"
@@ -396,8 +397,7 @@ PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_DRAFT_CRUMBS="Delete draft"
 PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_CRUMBS="Unpublish version"
 PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_DRAFT_INFO=""
 PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_DRAFT_WARNING_SINGLE="<strong>Warning</strong>: you are about to delete the single available version of a publication, which means that all publication information will be permanently erased."
-PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_DRAFT_WARNING="Are you sure you want to permanently delete this draft?"
-If this is the only available version of the publication, all publication information will be deleted.
+PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_DRAFT_WARNING="Are you sure you want to permanently delete this draft? If this is the only available version of the publication, all publication information will be deleted."
 PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_INFO="Unpublishing a version will not delete the publication page or associated content, but will simply render the page as archived and the content as unavailable. The publication page can still be accessed via a direct link, DOI redirect, or via a version archive. You can republish the version (with the same DOI handle) at a later time."
 PLG_PROJECTS_PUBLICATIONS_PUB_UNPUBLISH_WARNING="<strong>Warning</strong>: the version you are about to unpublish is the single publicly available version of the publication. If a publication has no versions in published status, it will no longer appear in search or public listings. Are you sure you want to proceed?"
 PLG_PROJECTS_PUBLICATIONS_CANT_DELETE="Sorry, you can only delete a draft or take down a published version of a publication."
@@ -787,7 +787,7 @@ PLG_PROJECTS_PUBLICATIONS_PUB_AUTHORS_EDIT_TEAM="edit your publication team"
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_READ_ONLY="You have a read-only access to this publication."
 
 ; Access
-PLG_PROJECTS_PUBLICATIONS_ACCESS=Access Restrictions
+PLG_PROJECTS_PUBLICATIONS_ACCESS="Access Restrictions"
 PLG_PROJECTS_PUBLICATIONS_PROVIDE_ACCESS="Please specify any access restriction to your publication."
 PLG_PROJECTS_PUBLICATIONS_RESTRICTION_FOR_ALL_VERSIONS="The restriction will affect every version of this publication."
 PLG_PROJECTS_PUBLICATIONS_ACCESS_PUBLIC="Public"
