--- a/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/language/en-GB/en-GB.plg_projects_publications.ini
@@ -174,6 +174,7 @@ PLG_PROJECTS_PUBLICATIONS_UNPUBLISHED="Unpublished"
 PLG_PROJECTS_PUBLICATIONS_IN_DEV="In Development"
 PLG_PROJECTS_PUBLICATIONS_TOTAL="total"
 PLG_PROJECTS_PUBLICATIONS_TITLE="Title"
+PLG_PROJECTS_PUBLICATIONS_ID="ID"
 PLG_PROJECTS_PUBLICATIONS_OPTIONS="Options"
 PLG_PROJECTS_PUBLICATIONS_STARTED="Started"
 PLG_PROJECTS_PUBLICATIONS_CREATED="created"
@@ -787,7 +788,7 @@ PLG_PROJECTS_PUBLICATIONS_PUB_AUTHORS_EDIT_TEAM="edit your resource team"
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_READ_ONLY="You have a read-only access to this resource."
 
 ; Access
-PLG_PROJECTS_PUBLICATIONS_ACCESS=Access Restrictions
+PLG_PROJECTS_PUBLICATIONS_ACCESS="Access Restrictions"
 PLG_PROJECTS_PUBLICATIONS_PROVIDE_ACCESS="Please specify any access restriction to your resource."
 PLG_PROJECTS_PUBLICATIONS_RESTRICTION_FOR_ALL_VERSIONS="The restriction will affect every version of this resource."
 PLG_PROJECTS_PUBLICATIONS_ACCESS_PUBLIC="Public"
