[feature] Add ability to re-send e-mail confirmation link Administrators will see a re-send Confirmation E-mail buttton on the edit page of users that haven't confirmed their e-mail

--- a/core/components/com_members/admin/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/admin/language/en-GB/en-GB.com_members.ini
@@ -61,6 +61,7 @@ COM_MEMBERS_DOMAIN_SUPPLIED_EMAIL="Domain Supplied Email"
 COM_MEMBERS_UPDATE="Update"
 COM_MEMBERS_STATUS="Status"
 COM_MEMBERS_DEBUG_USER="Debug Permissions Report"
+COM_MEMBERS_RESEND_CONFIRM="Re-send Confirmation E-mail"
 
 ; Errors / Messages
 COM_MEMBERS_NO_ID="Missing member ID."
@@ -89,6 +90,8 @@ COM_MEMBERS_PASSWORD_DOES_NOT_MEET_REQUIREMENTS="Password does not meet site pas
 COM_MEMBERS_FAILED_TO_UPDATE_REGISTRATION_TOU="Unable to set registration field TOU to required on next update."
 COM_MEMBERS_FAILED_TO_CLEAR_TOU="Unable to clear xprofiles terms of use."
 COM_MEMBERS_SUCESSFULLY_CLEARED_TOU="Terms of Use successfully cleared & registration param updated!"
+COM_MEMBERS_RESEND_CONFIRM_SUCCESS="Successfully re-sent confirmation e-mail."
+COM_MEMBERS_RESEND_CONFIRM_ERROR="There was an error re-sending the confirmation e-mail."
 
 ; Profiles
 COM_MEMBERS_CONFIRM="Confirm"
