[feat] Adding admin controls to set/change ticketid and state

--- a/core/components/com_tools/admin/language/en-GB/en-GB.com_tools.ini
+++ b/core/components/com_tools/admin/language/en-GB/en-GB.com_tools.ini
@@ -122,6 +122,9 @@ COM_TOOLS_FIELD_ZONE_VNC_PROXY_SECURE_SERVER="Secure VNC Proxy Server"
 COM_TOOLS_FIELD_ZONE_VNC_PROXY_APPLET="VNC Applet Archive URL"
 COM_TOOLS_FIELD_ZONE_VNC_PROXY_APPLET_SECURE="Secure VNC Applet Archive URL"
 COM_TOOLS_FIELD_ZONE_VNC_PROXY_VIEWER_CLASS="Class"
+COM_TOOLS_FIELD_TICKETID="Ticket ID"
+COM_TOOLS_FIELD_REGISTERED="Registered"
+COM_TOOLS_FIELD_REGISTERED_BY="Registered By"
 
 ; Images
 COM_TOOLS_IMAGE_CLICK_OR_DROP="Click or drop file"
