Added the ability for guests to subscribe to mailing lists.

--- a/core/components/com_newsletter/site/language/en-GB/en-GB.com_newsletter.ini
+++ b/core/components/com_newsletter/site/language/en-GB/en-GB.com_newsletter.ini
@@ -61,3 +61,6 @@ COM_NEWSLETTER_MAILINGLIST_UNSUBSCRIBE_SUCCESS="You have been successfully unsub
 COM_NEWSLETTER_MAILINGLIST_UNSUBSCRIBE_DEFAULTLIST="This is the main hub mailing list. You are automatically added to this list when you create your account but you can edit your profile email preferences to remove yourself from this list. Follow the steps below to update your mail preference options:"
 COM_NEWSLETTER_MAILINGLIST_UNSUBSCRIBE_ALREADY_UNSUBSCRIBED="You are already unsubscribed from the mailing list: %s"
 
+COM_NEWSLETTER_MAILINGLISTS_GUEST_PROMPT="Please Login or Enter Your Email Address"
+COM_NEWSLETTER_MAILINGLISTS_EMAIL="Email Address"
+COM_NEWSLETTER_MAILINGLISTS_CONTINUE_GUEST="Continue as Guest"
