--- a/core/components/com_groups/admin/language/en-GB/en-GB.com_groups.ini
+++ b/core/components/com_groups/admin/language/en-GB/en-GB.com_groups.ini
@@ -7,6 +7,9 @@
 
 COM_GROUPS_CONFIGURATION="Groups Configuration"
 
+COM_GROUPS_MENU_GROUPS="Groups"
+COM_GROUPS_MENU_IMPORT="Import"
+
 COM_GROUPS_GROUP="Group"
 COM_GROUPS="Groups"
 COM_GROUPS_ABOUT="About"
