--- a/core/components/com_mailto/admin/language/en-GB/en-GB.com_mailto.sys.ini
+++ b/core/components/com_mailto/admin/language/en-GB/en-GB.com_mailto.sys.ini
@@ -1,8 +1,9 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
+; @package      hubzero-cms
+; @file         language/en-GB/en-GB.com_mailto.sys.ini
+; @copyright    Copyright 2005-2018 HUBzero Foundation, LLC.
+; @license      http://opensource.org/licenses/MIT MIT
+
+; Note : All ini files need to be saved as UTF-8 - No BOM
 
 COM_MAILTO="Mail to"
 COM_MAILTO_XML_DESCRIPTION="A generic mail to friend component"
-
