--- a/core/components/com_mailto/site/language/en-GB/en-GB.com_mailto.ini
+++ b/core/components/com_mailto/site/language/en-GB/en-GB.com_mailto.ini
@@ -1,6 +1,8 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; @package      hubzero-cms
+; @file         language/en-GB/en-GB.com_mailto.ini
+; @copyright    Copyright 2005-2018 HUBzero Foundation, LLC.
+; @license      http://opensource.org/licenses/MIT MIT
+
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 COM_MAILTO="Mailto"
