[fix] Show user ID if name not found
Fixes: https://cdmhub.org/support/ticket/1684

--- a/core/components/com_blog/admin/language/en-GB/en-GB.com_blog.ini
+++ b/core/components/com_blog/admin/language/en-GB/en-GB.com_blog.ini
@@ -35,6 +35,7 @@ COM_BLOG_FINISH="Finish"
 COM_BLOG_NO_EXPIRY="No Expiry"
 COM_BLOG_START="Start"
 COM_BLOG_ALWAYS="Always"
+COM_BLOG_UNKNOWN="(unknown)"
 
 ; Columns
 COM_BLOG_COL_ID="ID"
