--- a/core/components/com_courses/site/language/en-GB/en-GB.com_courses.ini
+++ b/core/components/com_courses/site/language/en-GB/en-GB.com_courses.ini
@@ -84,6 +84,12 @@ COM_COURSES_FINDING_A_COURSE_EXPLANATION="Use the sorting and filtering options 
 COM_COURSES_POPULAR_CATEGORIES="Popular Categories"
 COM_COURSES_POPULAR_CATEGORIES_NONE="No categories have been set."
 
+; New
+COM_COURSES_NEW_EXPLANATION="Here is where we'll create a catalog entry and start describing the course. We'll build an outline and add files in a later step."
+COM_COURSES_NEW_CREATE_ENTRY="Creating a catalog entry"
+COM_COURSES_FIELD_ALIAS="Course identifier"
+COM_COURSES_FIELD_ALIAS_HINT="This is a short identifier used for URLs, catalogs, etc. Allowed characters are letters, numbers, dashes, underscores, and periods. Example: biology101, chem.501"
+
 ; Course
 COM_COURSES_INSTRUCTOR_NO_BIO="This instructor has yet to write their bio."
 COM_COURSES_CATALOG="Course Catalog"
@@ -108,6 +114,7 @@ COM_COURSES_LONG_DESCRIPTION="Long description"
 COM_COURSES_LONG_DESCRIPTION_NONE="No overview has been provided for this course yet."
 COM_COURSES_FIELD_TITLE="Title"
 COM_COURSES_FIELD_BLURB="Short description"
+COM_COURSES_FIELD_BLURB_HINT="A brief, one or two sentences about your course. Think of this as the text you would see in a course catalog."
 COM_COURSES_FIELDSET_NEW_OFFERING="Creating an offering"
 COM_COURSES_FIELD_OFFERING_ALIAS="Offering identifier"
 COM_COURSES_FIELD_OFFERING_ALIAS_HINT="This is a short identifier used for URLs. Allowed characters are letters, numbers, dashes, underscores, and periods. Example: fall2013, version1. If none is provided, one will be generated from the title."
@@ -120,6 +127,9 @@ COM_COURSES_COURSE_CERTIFICATE="Certificate"
 COM_COURSES_COURSE_CERTIFICATE_AVAILABLE="Available"
 COM_COURSES_COURSE_ENROLLED="Enrolled"
 COM_COURSES_SUMMARY="Time &amp; Effort"
+COM_COURSES_FIELDS_STATE_DRAFT="This course is currently in a 'draft' state. Draft entries do not appear in the course catalog until published."
+COM_COURSES_PUBLISH="Publish"
+COM_COURSES_COURSE_PUBLISHED="The course %s has been successfully published."
 
 ; Managers
 COM_COURSES_ADD_MANAGER_LABEL="Enter comma-separated usernames or IDs"
@@ -156,7 +166,7 @@ COM_COURSES_DEPLOYMENT_UNAVAILABLE="This deployment is not yet available"
 COM_COURSES_WARNING_EXCEEDED_ATTEMPTS="You're not allowed this many attempts!"
 
 ; Offering
-COM_COURSES_NOT_PUBLISHED="This course is currently not available."
+COM_COURSES_NOT_PUBLISHED="This course is currently not avilable."
 COM_COURSES_PLUGIN_OFF="Access to the '%s' section has been disabled for this course. Contact one of the course managers regarding this."
 COM_COURSES_PLUGIN_REGISTERED="Access to the '%s' section of this course is restricted to registered HUB users and / or course members. You must first log in."
 COM_COURSES_PLUGIN_REQUIRES_MEMBER="Access to the '%s' section of this course is restricted to members only. You must be a member to view the content."
@@ -172,8 +182,8 @@ COM_COURSES_WHERE_TO_LEARN_MORE="Where can I learn more about this course?"
 COM_COURSES_WHERE_TO_LEARN_MORE_EXPLANATION="To learn more, either visit the <a href="_QQ_"%s"_QQ_">course overview page</a> or browse the <a href="_QQ_"%s"_QQ_">course listing</a>."
 COM_COURSES_I_SHOULD_HAVE_ACCESS="Help! I should be in this course!"
 COM_COURSES_I_SHOULD_HAVE_ACCESS_EXPLANATION="If you feel this is in error, please contact <a href="_QQ_"%s"_QQ_">support</a>"
-COM_COURSES_WHERE_CAN_I_FIND_OTHER_COURSES="Where can I find other courses?"
-COM_COURSES_WHERE_CAN_I_FIND_OTHER_COURSES_EXPLANATIONS="You can browse the <a href="_QQ_"%s"_QQ_">course listing</a> to find all the current offerings."
+COM_COURSES_WHERE_CAN_I_FIND_THER_COURSES="Where can I find other courses?"
+COM_COURSES_WHERE_CAN_I_FIND_THER_COURSES_EXPLANATIONS="You can browse the <a href="_QQ_"%s"_QQ_">course listing</a> to find all the current offerings."
 COM_COURSES_REDEEM="Redeem"
 COM_COURSES_REDEEM_COUPON_CODE="Redeem Coupon Code"
 COM_COURSES_FIELD_COUPON_CODE="Coupon Code"
@@ -201,7 +211,7 @@ COM_COURSES_VIDEO_ERROR_NO_PLAYABLE_ASSETS="This lecture has no playable videos 
 COM_COURSES_VIDEO_ERROR_INVALID_JSON="Video manifest does not contain valid JSON"
 COM_COURSES_VIDEO_ERROR_MISSING_FORMATS="Missing necessary media formats for video or audio."
 COM_COURSES_VIDEO_ERROR_MISSING_SLIDES_FORMAT="Video Slides must be Uploaded in the Three Standard Formats. You currently only have %s (%s)."
-COM_COURSES_VIDEO_ERROR_MISSING_STILL_IMAGE="Slides containing video must have a still image of the slide for mobile support. Please upload an image with the filename &quot;%s.png&quot;."
+COM_COURSES_VIDEO_ERROR_MISSING_STILL_IMAGE="Slides containing video must have a still image of the slide for mobile suport. Please upload an image with the filename &quot;%s.png&quot;."
 COM_COURSES_VIDEO_SEARCH_TRANSCRIPT="Search Transcript..."
 COM_COURSES_VIDEO_KEYBOARD_SHORTCUTS="Keyboard Shortcuts"
 COM_COURSES_VIDEO_CLOSE="Close"
@@ -264,5 +274,5 @@ COM_COURSES_ERROR_MISSING_COURSE="No course ID found."
 COM_COURSES_INVALID_REQUEST="Invalid request"
 COM_COURSES_NOT_AUTH="You are not authorized to download the file:"
 COM_COURSES_FILE_NOT_FOUND="The requested file could not be found:"
-COM_COURSES_SERVER_ERROR="An error occurred while trying to output the file"
+COM_COURSES_SERVER_ERROR="An error occured while trying to output the file"
 COM_COURSES_ERROR_PAGE_NOT_FOUND="Page not found."
