Added the ability for guest users to sign up for the default mailing list.

--- a/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
+++ b/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
@@ -156,7 +156,7 @@ COM_NEWSLETTER_NEWSLETTER_SEND_SCHEDULE_LATER_OPTION_PM="PM"
 COM_NEWSLETTER_NEWSLETTER_SEND_SCHEDULE_LATER_EST="EST"
 COM_NEWSLETTER_NEWSLETTER_SEND_MAILINGLIST="Mailing List"
 COM_NEWSLETTER_NEWSLETTER_SEND_MAILINGLIST_OPTION_NULL="- Select Mailing List -"
-COM_NEWSLETTER_NEWSLETTER_SEND_MAILINGLIST_OPTION_DEFAULT="Default List - All HUB members with their email preference Set to Yes"
+COM_NEWSLETTER_NEWSLETTER_SEND_MAILINGLIST_OPTION_DEFAULT="Default List - All HUB members with their email preference set to yes and guests that have signed up for this list"
 COM_NEWSLETTER_NEWSLETTER_SEND_MAILINGLIST_RECIEVE="# of Members to Receive Newsletter: "
 COM_NEWSLETTER_PREVIEW="Newsletter Preview"
 COM_NEWSLETTER_NUM_OF_EMAILS_SENT="%s of %s emails sent"
