[fix] Adding message to not use mass mail for commercial messages.

--- a/core/components/com_members/admin/language/en-GB/en-GB.com_members.mail.ini
+++ b/core/components/com_members/admin/language/en-GB/en-GB.com_members.mail.ini
@@ -34,3 +34,4 @@ COM_MEMBERS_MAIL_THE_MAIL_COULD_NOT_BE_SENT="The mail could not be sent."
 COM_MEMBERS_MASS_MAIL="Mass Mail"
 COM_MEMBERS_MASS_MAIL_DESC="Mass Mail options"
 COM_MEMBERS_TOOLBAR_MAIL_SEND_MAIL="Send email"
+COM_MEMBERS_MAIL_DO_NOT_USE_FOR_COMMERCIAL_USE="Do not use for commercial messages, which include advertisement or promotion of a commercial product or service. For guidelines on what may constitute commercial messages, please read <a href="_QQ_"https://www.ftc.gov/tips-advice/business-center/guidance/can-spam-act-compliance-guide-business"_QQ_">https://www.ftc.gov/tips-advice/business-center/guidance/can-spam-act-compliance-guide-business</a>"
