--- a/bootstrap/site/language/overrides/en-GB.override.ini
+++ b/bootstrap/site/language/overrides/en-GB.override.ini
@@ -1,6 +1,6 @@
 ; PLG_PUBLICATIONS_WATCH
 PLG_PUBLICATIONS_WATCH_SUBSCRIBE="Watch resource"
-PLG_PUBLICATIONS_WATCH_UNSUBSCRIBE="Stop watching resource"
+PLG_PUBLICATIONS_WATCH_UNSUBSCRIBE="Stop watching"
 PLG_PUBLICATIONS_WATCH_SUCCESS_SUBSCRIBED="You have successfully subscribed to watch this resource"
 PLG_PUBLICATIONS_WATCH_SUCCESS_UNSUBSCRIBED="You have successfully unsubscribed from notifications about this resource"
 
