[fix] Update com_courses badge creation code

--- a/core/components/com_courses/admin/language/en-GB/en-GB.com_courses.ini
+++ b/core/components/com_courses/admin/language/en-GB/en-GB.com_courses.ini
@@ -386,7 +386,10 @@ COM_COURSES_PASSPORTISSUER_LABEL="Passport Issuer ID"
 COM_COURSES_PASSPORTISSUER_DESC="Passport ID for your issuer"
 COM_COURSES_PASSPORTCLIENT_LABEL="Passport Client ID"
 COM_COURSES_PASSPORTCLIENT_DESC="Passport ID for your client"
-COM_COURSES_BADGE_REQUEST_LABEL="Request Type"
+COM_COURSES_PASSPORTUSERNAME_LABEL="Passport Username"
+COM_COURSES_PASSPORTUSERNAME_DESC="Passport username for hub"
+COM_COURSES_PASSPORTPASSWORD_LABEL="Passport password"
+COM_COURSES_PASSPORTPASSWORD_DESC="Passport password for hub"
 COM_COURSES_BADGE_REQUEST_DESC="Badges request/authentication method type"
 COM_COURSES_UNITY_LABEL="Unity Key"
 COM_COURSES_UNiTY_DESC="Encryption key for unity communication"
