[fix] Adding missing lang strings and throw exception, not return

--- a/core/plugins/user/xusers/language/en-GB/en-GB.plg_user_xusers.sys.ini
+++ b/core/plugins/user/xusers/language/en-GB/en-GB.plg_user_xusers.sys.ini
@@ -1,8 +1,10 @@
 ; @package      hubzero-cms
-; @file         administrator/language/en-GB/en-GB.plg_user_xusers.sys.ini
+; @file         language/en-GB/en-GB.plg_user_xusers.sys.ini
 ; @copyright    Copyright 2005-2015 HUBzero Foundation, LLC.
 ; @license      http://opensource.org/licenses/MIT MIT
 
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_USER_XUSERS="User - Xusers"
+E_HUBZERO_USER_PLUGIN_MISCONFIGURED="HUBzero plugin (plg_user_hubzero) not installed, enabled, or misconfigured. The plg_user_hubzero plugin is required to be installed, enabled, and come *before* this plugin in ordering."
+E_HUBZERO_USER_PLUGIN_FAILED="Unknown error occurred."
