[fix] Handle unset local passes when Accoutn plugin is disabled This has slightly better handling of password setting, especially when a local password hasn't been set.
Fixes: https://purr.purdue.edu/support/ticket/1738

--- a/core/plugins/members/profile/language/en-GB/en-GB.plg_members_profile.ini
+++ b/core/plugins/members/profile/language/en-GB/en-GB.plg_members_profile.ini
@@ -57,6 +57,7 @@ PLG_MEMBERS_PROFILE_PASSWORD="Password"
 PLG_MEMBERS_PROFILE_PASSWORD_CURRENT="Current Password"
 PLG_MEMBERS_PROFILE_PASSWORD_NEW="New Password"
 PLG_MEMBERS_PROFILE_PASSWORD_CONFIRM="Confirm New Password"
+PLG_MEMBERS_PROFILE_PASSWORD_NOT_SET="No local password set."
 
 ; Email
 PLG_MEMBERS_PROFILE_EMAIL="E-mail"
