[feat] Display ID of parent resource for easier lookup

--- a/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
+++ b/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
@@ -187,6 +187,7 @@ COM_RESOURCES_NUM_PASSED_TITLE="Passed :: Click to view entries"
 COM_RESOURCES_NUM_FAILED="%s <span>failed</span>"
 COM_RESOURCES_NUM_FAILED_TITLE="Failed :: Click to view entries"
 COM_RESOURCES_AUDIT_ID="ID"
+COM_RESOURCES_AUDIT_PARENT_ID="Parent IDs"
 COM_RESOURCES_AUDIT_ENTRY="Entry"
 COM_RESOURCES_AUDIT_STATUS="Status"
 
