[fix] Extra security and validation checks

--- a/core/components/com_newsletter/site/language/en-GB/en-GB.com_newsletter.ini
+++ b/core/components/com_newsletter/site/language/en-GB/en-GB.com_newsletter.ini
@@ -37,6 +37,7 @@ COM_NEWSLETTER_SUBSCRIBE_BADLIST="There is an issue with the mailing list you ar
 COM_NEWSLETTER_SUBSCRIBE_SUCCESS="You have successfully signed up for the '%s' mailing list. Please confirm your subscription by clicking the link in the email we have sent you."
 COM_NEWSLETTER_MAILINGLISTS_SAVE_SUCCESS="You have successfully saved your newsletter subscriptions preferences."
 COM_NEWSLETTER_MAILINGLISTS_CONFIRM_SENT="You successfully resent a confirmation email to '%s'."
+COM_NEWSLETTER_LOGIN="Login"
 
 COM_NEWSLETTER_MAILINGLISTS_UNSUBSCRIBE="Unsubscribe From Mailing List"
 COM_NEWSLETTER_MAILINGLISTS_UNSUBSCRIBE_DESC="Are you sure you want to unsubscribe from the following mailing list:"
