--- a/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -31,6 +31,7 @@ PLG_PROJECTS_PUBLICATIONS_CURATION_REVIEW_INFO_PREVIEW="Please preview the publi
 PLG_PROJECTS_PUBLICATIONS_CURATION_REVIEW_DATE="Publishing settings"
 PLG_PROJECTS_PUBLICATIONS_CURATION_TITLE_AGREE="Agreements"
 PLG_PROJECTS_PUBLICATIONS_CURATION_TITLE_COMMENT="Comments"
+PLG_PROJECTS_PUBLICATIONS_CURATION_TITLE_REVIEW="Request Review"
 PLG_PROJECTS_PUBLICATIONS_CURATION_DESC_COMMENT="Leave any additional comments to an administrator about your publication draft:"
 PLG_PROJECTS_PUBLICATIONS_CURATION_LOOKING_GOOD="All looking good?"
 PLG_PROJECTS_PUBLICATIONS_SUBMIT_DRAFT="Submit draft"
@@ -962,6 +963,7 @@ PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_WHAT_TO_EXPECT="Important notices:"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_ACCESS_IS="Content access is"
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_NOT_NOW="Not now"
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_AGREE_TO="I and all publication authors have read and agree to"
+PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_REVIEW="I would like for this publication to be reviewed instead of automatically being published."
 PLG_PROJECTS_PUBLICATIONS_PUB_REVIEW_TERMS_OF_DEPOSIT="Terms of Deposit"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_REVIEW_AGREE_TERMS_REQUIRED="Please check the box to confirm you agree to the Terms of Deposit."
 
