[fix] Show forks for older versions Also, show the list of all forks and indicate which version the fork was created from.
Fixes: https://qubeshub.org/support/ticket/1191

--- a/core/plugins/publications/forks/language/en-GB/en-GB.plg_publications_forks.ini
+++ b/core/plugins/publications/forks/language/en-GB/en-GB.plg_publications_forks.ini
@@ -15,7 +15,7 @@ PLG_PUBLICATIONS_FORKS_FORK="Fork"
 PLG_PUBLICATIONS_FORKS_FORKED_N_TIMES="This publication has been forked %s times."
 
 ; Browse
-PLG_PUBLICATIONS_FORKS_FROM="Forked from"
+PLG_PUBLICATIONS_FORKS_FROM="Forked from version %s"
 PLG_PUBLICATIONS_FORKS_FORKED_BY="Forked by %s"
 PLG_PUBLICATIONS_FORKS_DIFF="Diff"
 PLG_PUBLICATIONS_FORKS_NONE="This publication has no forks."
