Added ability to specify email addresses for new account notifications

--- a/core/plugins/user/hubzero/language/en-GB/en-GB.plg_user_hubzero.ini
+++ b/core/plugins/user/hubzero/language/en-GB/en-GB.plg_user_hubzero.ini
@@ -13,8 +13,8 @@ PLG_USER_HUBZERO_FIELD_AUTOREGISTER_DESC="Automatically create Registered Users 
 PLG_USER_HUBZERO_FIELD_AUTOREGISTER_LABEL="Auto-create Users"
 PLG_USER_HUBZERO_FIELD_MAILTOUSER_DESC="When an administrator creates a user account, this determines if an email, which contains their username and password, is sent to the user."
 PLG_USER_HUBZERO_FIELD_MAILTOUSER_LABEL="Notification Mail to User"
-PLG_USER_HUBZERO_FIELD_MAILTOADMIN_DESC="When a user creates an account, this determines if an email is sent to the site administrator."
-PLG_USER_HUBZERO_FIELD_MAILTOADMIN_LABEL="Notification Mail to Administrator"
+PLG_USER_HUBZERO_FIELD_MAILTOADMIN_DESC="When a user creates an account, a notification will be sent to the email addresses in the specified comma separated list below. If no email adresses are present, then no notifications will be sent. '{config.mailfrom}' may also be entered to send notifications to the CMS global mail configuration."
+PLG_USER_HUBZERO_FIELD_MAILTOADMIN_LABEL="Notification of New Account Creation"
 
 ; User email
 PLG_USER_HUBZERO_NEW_USER_EMAIL_BODY="Hello %s,\n\n\nYou have been added as a User to %s by an Administrator.\n\nThis email contains your username and password to log in to %s\n\nUsername: %s\nPassword: %s\n\n\nPlease do not respond to this message as it is automatically generated and is for information purposes only."
