[feat] Retain original uploaded picture This retains the original uploaded project picture. Calls to get the project image will result in either the thumbnail or the sized down 'master' version. The original is not loaded unless specifically asked for. Added a pane to admin project page to view all image sizes.

--- a/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
@@ -181,7 +181,13 @@ COM_PROJECTS_NO_RESULTS="No records to display"
 COM_PROJECTS_CUSTOM_DESCRIPTION="Custom Description"
 COM_PROJECTS_USE_TEMPLATE="YES - Use custom description"
 COM_PROJECTS_NONE="(none)"
-
+COM_PROJECTS_IMAGE="Image"
+COM_PROJECTS_IMAGE_THUMB="Thumbnail"
+COM_PROJECTS_IMAGE_MASTER="Master"
+COM_PROJECTS_IMAGE_ORIGINAL="Original"
+COM_PROJECTS_IMAGE_WIDTH="Width"
+COM_PROJECTS_IMAGE_HEIGHT="Height"
+COM_PROJECTS_IMAGE_SIZE="Size"
 COM_PROJECTS_OR="or"
 COM_PROJECTS_AND_OR="and/or"
 COM_PROJECTS_AS="as"
