[feat] Adding ability to collect extra profile data Each plugin now has extra parameters for each non-essential profile field that can be retrieved upon login. Each field can be configured to be collected or not.

--- a/core/plugins/authentication/linkedin/language/en-GB/en-GB.plg_authentication_linkedin.ini
+++ b/core/plugins/authentication/linkedin/language/en-GB/en-GB.plg_authentication_linkedin.ini
@@ -27,3 +27,13 @@ PLG_AUTHENTICATION_LINKEDIN_PARAM_SITELOGIN_LABEL="Site login"
 PLG_AUTHENTICATION_LINKEDIN_PARAM_SITELOGIN_DESC="Enable this plugin for frontend authentication"
 PLG_AUTHENTICATION_LINKEDIN_PARAM_ADMINLOGIN_LABEL="Admin login"
 PLG_AUTHENTICATION_LINKEDIN_PARAM_ADMINLOGIN_DESC="Enable this plugin for backend authentication"
+
+COM_PLUGINS_PROFILE_FIELDSET_LABEL="Profile Data"
+PLG_AUTHENTICATION_LINKEDIN_PARAM_NUMCONNECTIONS_LABEL="The number of LinkedIn connections the member has, capped at 500."
+PLG_AUTHENTICATION_LINKEDIN_PARAM_SUMMARY_LABEL="A long-form text area describing the member's professional profile."
+PLG_AUTHENTICATION_LINKEDIN_PARAM_SPECIALTIES_LABEL="A short-form text area describing the member's specialties."
+PLG_AUTHENTICATION_LINKEDIN_PARAM_PUBLICPROFILEURL_LABEL="Public Profile URL"
+PLG_AUTHENTICATION_LINKEDIN_PARAM_INDUSTRY_LABEL="The industry the member belongs to."
+PLG_AUTHENTICATION_LINKEDIN_PARAM_LOCATION_LABEL="The user's physical location."
+PLG_AUTHENTICATION_LINKEDIN_PARAM_POSITIONS_LABEL="The member's current position."
+PLG_AUTHENTICATION_LINKEDIN_PARAM_PROFILE_DESC="Choose whether or not to collect this data from the user's public profile on LinkedIn."
