[feat] Allow admins to see collected 3rd party data

--- a/core/components/com_members/admin/language/en-GB/en-GB.com_members.members.ini
+++ b/core/components/com_members/admin/language/en-GB/en-GB.com_members.members.ini
@@ -91,6 +91,7 @@ COM_MEMBERS_SPAM_COUNT="Lifetime Spam Incidents"
 COM_MEMBERS_SPAM_COUNT_HINT="The number of spam incidents over the lifetime of the account."
 COM_MEMBERS_SPAM_COUNT_EXCEEDED="User has exceeded the number of allowed spam incidents."
 COM_MEMBERS_RESET="Reset"
+COM_MEMBERS_AUTHENTICATOR_DATA="3rd-Party Provided"
 
 ; Params
 COM_MEMBERS_SETTINGS_FIELDSET_LABEL="Basic Settings"
