[fix] Ensure correct and sequential ordering values
Fixes: https://purr.purdue.edu/support/ticket/1795

--- a/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -654,6 +654,8 @@ PLG_PROJECTS_PUBLICATIONS_PUB_TYPE_TOOLS="Tool"
 PLG_PROJECTS_PUBLICATIONS_PUB_TYPE_NOTES="Notes"
 PLG_PROJECTS_PUBLICATIONS_PRIMARY_CONTENT_USED_DUPLICATE_NOT_ALLOWED="Publications with duplicate content aren't allowed."
 PLG_PROJECTS_PUBLICATIONS_VIEW_PUB_PAGE="View publication page &raquo;"
+PLG_PROJECTS_PUBLICATIONS_MOVEUP="Move up"
+PLG_PROJECTS_PUBLICATIONS_MOVEDOWN="Move down"
 
 ; Citations
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_CITATIONS="Citations"
