[feat] Adding a 'featured' column to projects This allows for marking a project as being 'featured' or not. This will be used in front-end browsing/filtering and possibly modules.

--- a/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
@@ -72,6 +72,7 @@ COM_PROJECTS_LAYOUT="Project page layout"
 COM_PROJECTS_LAYOUT_STANDARD="Standard (left-hand side menu)"
 COM_PROJECTS_LAYOUT_EXTENDED="New (top menu) layout"
 COM_PROJECTS_LESS_THAN_A_MINUTE="less than a minute"
+COM_PROJECTS_FEATURED="Featured"
 
 ; Filters
 COM_PROJECTS_SEARCH="Search"
@@ -126,6 +127,8 @@ COM_PROJECTS_SUCCESS_REINSTATED="Project successfully reinstated"
 COM_PROJECTS_SUCCESS_ACTIVATED="Project successfully activated"
 COM_PROJECTS_SUCCESS_MESSAGE_SENT="Message sent to project managers"
 COM_PROJECTS_SUCCESS_SAVED="Item successfully saved"
+COM_PROJECTS_SUCCESS_FEATURE="Item successfully featured"
+COM_PROJECTS_SUCCESS_UNFEATURE="Item successfully unfeatured"
 
 COM_PROJECTS_SUSPENDED="Suspended"
 COM_PROJECTS_INACTIVE="Inactive"
