[feat] Implement selective group project role sync
[refs] https://nciphub.org/support/ticket/1476

--- a/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
+++ b/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
@@ -1,10 +1,10 @@
 ; Copyright 2005-2009 HUBzero Foundation, LLC.
 ; All rights reserved.
-; 
+;
 ; This program is free software; you can redistribute it and/or
 ; modify it under the terms of the GNU General Public License,
 ; Version 2 as published by the Free Software Foundation.
- 
+
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_PROJECTS_TEAM="Team"
@@ -130,6 +130,8 @@ PLG_PROJECTS_TEAM_QUIT="Quit project"
 PLG_PROJECTS_TEAM_EMAIL_ADDED_AS_PUB_AUTHOR="You have been added as an author on "
 
 ; Group member selector
+PLG_PROJECTS_TEAM_ENTIRE_GROUP="Entire Group"
+PLG_PROJECTS_TEAM_PER_USER="Per User"
 PLG_PROJECTS_TEAM_GROUP_MEMBERS="Group Members"
 PLG_PROJECTS_TEAM_GROUP_LABEL_SYNC="<strong>Include all group members.</strong> All group members have project access and cannot be removed, as long as their group membership is valid."
 PLG_PROJECTS_TEAM_GROUP_LABEL_SELECT="<strong>Specify membership.</strong> Choose specific group members to have project access as long as their group membership is valid."
