[refactor] Extract text to lang strings

--- a/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
+++ b/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
@@ -143,6 +143,12 @@ PLG_PROJECTS_TEAM_GROUP_SYNC="Sync members now"
 PLG_PROJECTS_TEAM_GROUP_SELECT="Select members from group"
 PLG_PROJECTS_TEAM_GROUP_PROJECT_EDITING="This project is owned by a group."
 
+; Group member syncing
+PLG_PROJECTS_TEAM_SYNCING_DEFAULT="Sync members as..."
+PLG_PROJECTS_TEAM_SYNCING_COLLABORATORS="Collaborators"
+PLG_PROJECTS_TEAM_SYNCING_MANAGERS="Managers"
+PLG_PROJECTS_TEAM_SYNCING_REVIEWERS="Reviewers"
+
 ; Leave project
 PLG_PROJECTS_TEAM_LEAVE_PROJECT="Are you sure you want to leave this project?"
 PLG_PROJECTS_TEAM_LEAVE_PROJECT_NOTE="If you confirm leaving this project, you will no longer be able to access the project page, files or other associated protected resources."
