--- a/core/components/com_groups/admin/language/en-GB/en-GB.com_groups.import.ini
+++ b/core/components/com_groups/admin/language/en-GB/en-GB.com_groups.import.ini
@@ -71,6 +71,8 @@ COM_GROUPS_IMPORT_FIELDS_DEMOGRAPHICS="Demographics"
 COM_GROUPS_IMPORT_FIELDS_ACCOUNT="Account"
 COM_GROUPS_IMPORT_FIELDS_REGISTER="Registration"
 COM_GROUPS_IMPORT_ERROR_GROUP_NOT_FOUND="The specified group '%s' could not be found."
+COM_GROUPS_IMPORT_FIELDS_DETAILS="Standard Fields"
+COM_GROUPS_IMPORT_FIELDS_DESCRIPTION="Custom Fields"
 
 ; Import Run
 COM_GROUPS_IMPORT_SAMPLE="Sample import file"
