--- a/core/plugins/groups/memberoptions/language/en-GB/en-GB.plg_groups_memberoptions.ini
+++ b/core/plugins/groups/memberoptions/language/en-GB/en-GB.plg_groups_memberoptions.ini
@@ -9,3 +9,4 @@ GROUP_MEMBEROPTIONS="Member Options"
 GROUP_MEMBEROPTIONS_DESC="These settings are used to specify group specific configuration options for your account:"
 GROUP_RECEIVE_EMAILS_DISCUSSION_POSTS="Enable Email for posts"
 GROUP_MEMBEROPTIONS_NONE="There are currently no user configuratble options for this group."
+GROUP_MEMBEROPTIONS_UPDATED="You have successfully updated your email settings"
