[feat] FMN component admin view is working.

--- a/app/components/com_fmns/admin/language/en-GB/en-GB.com_fmns.ini
+++ b/app/components/com_fmns/admin/language/en-GB/en-GB.com_fmns.ini
@@ -2,3 +2,28 @@
 ;the naming style is just a convention, not a requirement!, com =components, partners=name of components, col= column
 
 COM_FMNS="Faculty Mentoring Networks"
+
+; Filters
+COM_FMNS_FILTER_SEARCH_PLACEHOLDER="Search..."
+COM_FMNS_GO="Go"
+
+; Columns
+COM_FMNS_COL_ID="ID"
+COM_FMNS_COL_ABOUT="About"
+COM_FMNS_COL_STATE="State"
+COM_FMNS_COL_FEATURED="Featured"
+COM_FMNS_COL_STATUS="Registration Status"
+COM_FMNS_COL_NAME="Name"
+
+; Messages
+COM_FMNS_ERROR_MISSING_FIELDS="Please fill out all required fields."
+COM_FMNS_ENTRY_SAVED="FMN successfully saved."
+COM_FMNS_ENTRIES_DELETED="FMN(s) successfully removed."
+COM_FMNS_SELECT_ENTRY_TO="Please select one or more items to %s"
+COM_FMNS_ITEMS_PUBLISHED="%s FMN(s) published."
+COM_FMNS_ITEMS_UNPUBLISHED="%s FMN(s) unpublished."
+COM_FMNS_ITEMS_ARCHIVED="%s FMN(s) archived."
+COM_FMNS_ITEMS_FEATURED="%s FMN(s) featured."
+COM_FMNS_ITEMS_UNFEATURED="%s FMN(s) unfeatured."
+COM_FMNS_ITEMS_OPENED="%s FMN(s) opened for registration."
+COM_FMNS_ITEMS_CLOSED="%s FMN(s) closed for registration."
