[feat] FMN component admin edit is working.
Still need to:
1. Add sponsors
2. Add event actions

--- a/app/components/com_fmns/admin/language/en-GB/en-GB.com_fmns.ini
+++ b/app/components/com_fmns/admin/language/en-GB/en-GB.com_fmns.ini
@@ -7,13 +7,40 @@ COM_FMNS="Faculty Mentoring Networks"
 COM_FMNS_FILTER_SEARCH_PLACEHOLDER="Search..."
 COM_FMNS_GO="Go"
 
-; Columns
+; Columns for table view
 COM_FMNS_COL_ID="ID"
 COM_FMNS_COL_ABOUT="About"
 COM_FMNS_COL_STATE="State"
 COM_FMNS_COL_FEATURED="Featured"
 COM_FMNS_COL_STATUS="Registration Status"
 COM_FMNS_COL_NAME="Name"
+
+; Entry Fields
+COM_FMNS_FIELDSET_REGISTRATION="Registration"
+COM_FMNS_FIELD_NAME="Name"
+COM_FMNS_FIELD_STATE="State"
+COM_FMNS_FIELD_FEATURED="Featured"
+COM_FMNS_FIELD_STATUS="Status"
+COM_FMNS_FIELD_STATUS_OPEN="Open"
+COM_FMNS_FIELD_STATUS_CLOSED="Closed"
+COM_FMNS_FIELD_ABOUT="About"
+COM_FMNS_FIELD_ID="ID"
+COM_FMNS_FIELD_GROUP_CN = "Group CN"
+COM_FMNS_FIELD_START_DATE = "Start Date"
+COM_FMNS_FIELD_STOP_DATE = "Stop Date"
+COM_FMNS_FIELD_FMN_EVENT_ID = "FMN Event ID"
+COM_FMNS_FIELD_REG_EVENT_ID = "Event ID"
+COM_FMNS_FIELD_REG_DUE_DATE = "Due Date"
+COM_FMNS_SELECT = "Select"
+
+; Entry Field Hints
+COM_FMNS_HINT_NAME = "Name of the FMN"
+COM_FMNS_HINT_ABOUT = "A brief description of the FMN, can use HTML formatting"
+COM_FMNS_HINT_GROUP_CN = "The url extension of the QUBES group"
+COM_FMNS_HINT_START_DATE = "The start date of the FMN"
+COM_FMNS_HINT_STOP_DATE = "The stop date of the FMN"
+COM_FMNS_HINT_REG_DUE_DATE = "The due date for FMN registration"
+COM_FMNS_HINT_REG_EVENT_ID = "The registration event id"
 
 ; Messages
 COM_FMNS_ERROR_MISSING_FIELDS="Please fill out all required fields."
@@ -27,3 +54,17 @@ COM_FMNS_ITEMS_FEATURED="%s FMN(s) featured."
 COM_FMNS_ITEMS_UNFEATURED="%s FMN(s) unfeatured."
 COM_FMNS_ITEMS_OPENED="%s FMN(s) opened for registration."
 COM_FMNS_ITEMS_CLOSED="%s FMN(s) closed for registration."
+
+; Confirmations
+COM_FMNS_CONFIRM_UPDATE_FMN_EVENT="Are you sure you want to update the FMN event? All current event content will be overridden."
+COM_FMNS_CONFIRM_UPDATE_REG_EVENT="Are you sure you want to update the Registration event? All current event content will be overridden."
+COM_FMNS_CONFIRM_DELETE_FMN_EVENT="Are you sure you want to delete the FMN event?"
+COM_FMNS_CONFIRM_DELETE_REG_EVENT="Are you sure you want to delete the Registration event?"
+
+; Config
+COM_FMNS_ACTION_EDITSTATE="Edit Published State"
+COM_FMNS_ACTION_EDITSTATE_COMPONENT_DESC="Allows users in the group to change the state of any content in this extension."
+COM_FMNS_ACTION_EDITFEATURED="Edit Featured State"
+COM_FMNS_ACTION_EDITFEATURED_COMPONENT_DESC="Allows users in the group to change the featured state of any content in this extension."
+COM_FMNS_ACTION_EDITSTATUS="Edit Registration Status"
+COM_FMNS_ACTION_EDITSTATUS_COMPONENT_DESC="Allows users in the group to change the registration status of any content in this extension."
