[fix] Have Collaborator show as the default role for invited users The front end was showing invited users as having the 'reviewer' role, causing confusion when viewing it from the backend.
refs: https://purr.purdue.edu/support/ticket/1826

--- a/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/admin/language/en-GB/en-GB.com_projects.ini
@@ -244,6 +244,7 @@ COM_PROJECTS_TEAM_LABEL_REVIEWER="Reviewer"
 COM_PROJECTS_TEAM_LABEL_COLLABORATOR="Collaborator"
 COM_PROJECTS_TEAM_NEVER="(never)"
 COM_PROJECTS_TEAM_NEW="Add Members"
+COM_PROJECTS_TEAM_INVITED="Invited"
 COM_PROJECTS_TEAM_ADD_IND_USER="Individuals (comma-separated list of usernames or user IDs)"
 COM_PROJECTS_TEAM_ADD_GROUP_OF_USERS="Add everyone from group (comma-separated list of group aliases or group IDs)"
 COM_PROJECTS_ERROR_MISSING_INFORMATION="No users or groups provided."
